# pico-bot

./: .flake8  .gitignore  .pre-commit-config.yaml  .pylintrc  Dockerfile  config.json  config.json.copy  pyproject.toml  readme.md
.github/workflows/: publish-docker.yml  summon.yml
picobot/: __main__.py  config.py  geometry.py  handlers.py  msg_type.py  painter.py  responses.py  video_editor.py
picobot/repository/: repo.py  user_entity.py
picobot/videos/: caravela.webm
tests/: test_painter.py  test_picobot.py
