[tool.poetry]
name = "picobot"
version = "0.2.0"
description = ""
authors = ["Arthur Mesquita Pickcius <arthur.pickcius@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.11"
python-telegram-bot = "^13.11"
dataset = "^1.1"
pillow = "^10.3"
python-slugify = "^4.0"
emoji = "^0.6.0"
typed-ast = "^1.5.2"
ffmpeg-python = "^0.2.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
flake8 = "^7.0.0"
isort = "^5.13.2"
black = "^24.3.0"

[tool.black]
skip_string_normalization = true
line_length = 100

[tool.isort]
profile = "hug"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
